--- a/src/components/aditionalService/aditionalService.css
+++ b/src/components/aditionalService/aditionalService.css
@@ -2,13 +2,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #01293f;
+  background-color: #e7cf67;
   border-top: 1px solid white;
-  margin-top: 10px;
+
+  opacity: 0;
+  transition: opacity 5s ease-in-out;
 }
 
 .servImg {
   width: 100%;
   height: 500px;
   border-radius: 12px;
+  clip-path: polygon(
+    0% 0%,
+    25% 0%,
+    50% 15%,
+    75% 0%,
+    100% 0%,
+    100% 75%,
+    75% 100%,
+    50% 100%,
+    25% 100%,
+    0% 75%
+  );
+}
+
+.services.visible {
+  opacity: 1;
 }
