--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -19,7 +19,7 @@
 }
 
 .header::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -34,21 +34,21 @@
 
 @keyframes slide {
   0% {
-    background-image: url("../../assets/sole/Logistics.jpg");
+    background-image: url('../../assets/sole/Logistics.jpg');
   }
 
   10% {
-    background-image: url("../../assets/sole/Logistics.jpg");
+    background-image: url('../../assets/sole/Logistics.jpg');
   }
 
   43% {
-    background-image: url("../../assets/sole/137706535_2832897623702809_3799256577048642001_n.jpg");
+    background-image: url('../../assets/sole/137706535_2832897623702809_3799256577048642001_n.jpg');
   }
   66% {
-    background-image: url("../../assets/sole/198714229_2942825642710006_3443354245656635815_n.jpg");
+    background-image: url('../../assets/sole/198714229_2942825642710006_3443354245656635815_n.jpg');
   }
   100% {
-    background-image: url("../../assets/sole/292435275_3234318383560729_6332790117099571211_n.jpg");
+    background-image: url('../../assets/sole/292435275_3234318383560729_6332790117099571211_n.jpg');
   }
 }
 
@@ -161,7 +161,7 @@
 }
 
 .nav-menu li a::before {
-  content: "";
+  content: '';
   position: absolute;
   bottom: -5px;
   left: 0;
@@ -219,4 +219,36 @@
 
 .nav-menu li:hover .dropdown-content {
   display: block;
+}
+
+.servicess {
+  position: relative;
+}
+
+.optional {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.75rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  left: 71rem;
+  top: 2.5rem;
+  list-style-type: none;
+  opacity: 0.7;
+}
+
+.link-style {
+  text-decoration: none;
+  color: black;
+}
+
+.link-style:hover {
+  font-weight: bold;
+  color: rgb(0, 208, 255);
 }
