--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -252,3 +252,21 @@
   font-weight: bold;
   color: rgb(0, 208, 255);
 }
+
+.optionalAbout {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.75rem;
+  padding: 1rem;
+  margin-top: 1rem;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  left: 79rem;
+  top: 2.5rem;
+  list-style-type: none;
+  opacity: 0.7;
+}
