--- a/src/components/aditionalService/aditionalService.css
+++ b/src/components/aditionalService/aditionalService.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #e7cf67;
+  background-color: rgb(0, 208, 255);
   border-top: 1px solid white;
 
   opacity: 0;
