--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -13,7 +13,7 @@
   margin: 20px;
   border-radius: 10px;
   overflow: hidden;
-
+  height: 90%;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 40px;
