--- a/src/components/aditionalService/aditionalService.css
+++ b/src/components/aditionalService/aditionalService.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(0, 208, 255);
+  background-color: #e7cf67;
   border-top: 1px solid white;
 
   opacity: 0;
@@ -10,7 +10,7 @@
 }
 
 .servImg {
-  width: 100%;
+  width: 50%;
   height: 500px;
   border-radius: 12px;
   clip-path: polygon(
