--- a/src/components/gallery/gallery.css
+++ b/src/components/gallery/gallery.css
@@ -2,7 +2,7 @@
   overflow-x: hidden;
   white-space: nowrap;
   position: relative;
-  background-color: rgb(0, 208, 255);
+  background-color: #e7cf67;
 }
 
 .gallery {
