--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   padding: 20px;
-  background-color: #01293f;
+  background-color: rgb(239, 239, 239);
 }
 
 /* Individual service item styling */
