--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,13 +14,13 @@
   color: #fff;
   padding: 20px 0;
   overflow: hidden;
-
   position: relative;
 }
 
 .header::before {
   content: "";
   position: absolute;
+
   top: 0;
   left: 0;
   width: 100%;
@@ -53,7 +53,7 @@
 }
 
 .container {
-  position: absolute;
+  position: fixed;
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
@@ -62,6 +62,8 @@
   top: 0;
 
   border-bottom-left-radius: 40px;
+  transition: opacity 0.5s ease;
+  z-index: 100;
 }
 
 .navbar {
@@ -264,6 +266,7 @@
   top: 2rem;
   list-style-type: none;
   opacity: 0.7;
+  z-index: 100;
 }
 
 .link-style {
@@ -292,6 +295,7 @@
   top: 2rem;
   list-style-type: none;
   opacity: 0.7;
+  z-index: 100;
 }
 
 .GeFlag {
